Thu Oct 10 11:11:33 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (Init_VM): hide also the singleton class of frozen-core, not
	  only frozen-core itself.

Thu Oct 10 06:02:08 2013  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_rand.rb: fix r43224. local variable `e' is
	  no longer available.

Thu Oct 10 00:02:35 2013  Yusuke Endoh  <mame@tsg.ne.jp>

	* numeric.c (fix_aref): avoid a possible undefined behavior.
	  1L << 63 on 64-bit platform is undefined, at least, according to
	  ISO/IEC 9899 (C99) 6.5.7.

Wed Oct  9 23:57:02 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (id_for_attr): avoid inadvertent symbol creation.

Wed Oct  9 18:03:01 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (rb_attr): preserve encoding of the attribute ID in
	  error message.

Wed Oct  9 17:40:16 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_fstring): because of lazy sweep, str may be unmarked
	  already and swept at next time, so mark it for the time being.
	  [ruby-core:57756]

Wed Oct  9 13:53:14 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compar.c (cmp_eq): fail if recursion.  [ruby-core:57736] [Bug #9003]

	* thread.c (rb_exec_recursive_paired_outer): new function which is
	  combination of paired and outer variants.

Wed Oct  9 09:18:14 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/debug.h,
	  vm_backtrace.c (rb_profile_frame_full_label): add new C API
	  rb_profile_frame_full_label() which returns label with
	  qualified method name.
	  Note that in future version of Ruby label() may return
	  same return value of full_label().

	* ext/-test-/debug/profile_frames.c,
	  test/-ext-/debug/test_profile_frames.rb: fix a test for this change.


Wed Oct  9 00:55:51 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (load_lock): display backtrace to $stderr at circular
	  require.

	* vm_backtrace.c (rb_backtrace_print_to): new function to print
	  backtrace to the given output.
